fixed another minor issue with the reply box above the chat input; the same box now displays the name of the original message's sender (sounds easy but I had to jump through multiple hoops to get that piece of data and all the other message data with only one query)

--- a/Client/src/css/ChatInput.css
+++ b/Client/src/css/ChatInput.css
@@ -48,12 +48,20 @@
 }
 
 #replyWrapper>div{
+    position: relative;
     padding: 5px;
     background-color: var(--senderMessageBg);
 }
 
 #replyWrapper>div>i:first-child{
     font-size: 0.8rem;
+}
+
+#replyWrapper>div>.fa-xmark{
+    position: absolute;
+    top: 3px;
+    right: 4px;
+    cursor: pointer;
 }
 
 #fontStylePopup{
