--- a/Client/src/css/MessageElement.css
+++ b/Client/src/css/MessageElement.css
@@ -69,99 +69,8 @@
     margin-bottom: 0px;
 }
 
-.messageDropdownButton{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 2px;
-    right: 2px;
-    height: 25px;
-    width: 25px;
-    cursor: pointer;
-}
-
-.senderRepliedMessage{
-    display: flex;
-    flex-direction: column;
-    width: calc(40vw - 29px);
-    justify-self: center;
-    align-self: center;
-    padding: 5px 10px;
-    margin: 5px 0px;
-    background-color: var(--senderReplyBg);
-}
-
-.recipientRepliedMessage{
-    display: flex;
-    flex-direction: column;
-    width: calc(40vw - 29px);
-    justify-self: center;
-    align-self: center;
-    padding: 5px 10px;
-    margin: 5px 0px;
-    background-color: var(--recipientReplyBg);
-}
-
-.senderRepliedMessage>i, .recipientRepliedMessage>i{
-    font-size: 0.8rem;
-}
-
-.senderMessageDropdown{
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    right: 10px;
-    top: 25px;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    background-color: var(--senderMessageBg);
-    box-shadow: 0px 0px 8px var(--senderMessageDropdownBorder);
-}
-
-.senderMessageDropdown>li{
-    padding: 3px 15px 3px 5px;
-    cursor: pointer;
-}
-
-.senderMessageDropdown>li:hover{
-    background-color: var(--senderReplyBg);
-}
-
-.recipientMessageDropdown{
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    right: 10px;
-    top: 25px;
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-    box-shadow: 0px 0px 8px var(--recipientMessageDropdownBorder);
-    background-color: var(--recipientMessageBg);
-}
-
-.recipientMessageDropdown>li{
-    padding: 3px 15px 3px 5px;
-    cursor: pointer;
-}
-
-.recipientMessageDropdown>li:hover{
-    background-color: var(--recipientReplyBg);
-}
-
-
 @media screen and (min-Width: 996px) {
     .senderMessage, .recipientMessage, .timeSentSender, .timeSentRecipient{
         width: 40vw;
-    }
-
-    .messageDropdownButton{
-        display: none;
-    }
-
-    .senderMessage:hover .messageDropdownButton, .recipientMessage:hover .messageDropdownButton{
-        display: flex;
     }
 }
